--- a/index.html
+++ b/index.html
@@ -10,7 +10,21 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
+    <div class="quote-container" id="quote-container">
+        <div class="quote-text">
+            <i class="fas fa-quote-left"></i>
+            <span id="quote">What you are is what you have been. What you will be what you are doing now</span>
+        </div>
+        <div class="quote-author">
+            <span id="author">Lor Buddha</span>
+        </div>
+        <div class="button-container">
+            <button class="twitter-button" id="twitter" title="tweet this">
+                <i class="fab fa-twitter"></i>
+            </button>
+            <button id="new-quote">New Quote</button>
+        </div>
+    </div>
     
     <!-- Scripts -->
     <script src="./script.js"></script>
