--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
+    <title>Quote Generator</title>
     <link rel="icon" type='image/png' href="https://www.google.com/s2/u/0/favicons?domain=jacinto.design">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="./styles.css">
 </head>
+<!-- alt + z multiple lines-->
 <body>
     <div class="quote-container" id="quote-container">
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
-            <span id="quote">What you are is what you have been. What you will be what you are doing now</span>
+            <span id="quote"></span>
         </div>
         <div class="quote-author">
-            <span id="author">Lor Buddha</span>
+            <span id="author"></span>
         </div>
         <div class="button-container">
             <button class="twitter-button" id="twitter" title="tweet this">
