--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <button id="new-quote">New Quote</button>
         </div>
     </div>
+    <div id="loader"></div>
     
     <!-- Scripts -->
     <script src="./script.js"></script>
